Implemented POST-query "/settings/slave_answer"
